[package]
name = "bevy_button_released_plugin"
version = "0.8.0"
edition = "2021"
repository = "https://github.com/Leinnan/bevy_button_released_plugin"
homepage = "https://github.com/Leinnan/bevy_button_released_plugin"
readme = "README.md"
license = "MIT"
keywords = ["bevy", "game"]
categories  = ["game-engines"]
description = "Bevy helper crate that allows to react to button being released."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["auto_add"]
auto_add = []
global_event = []

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_ui",
    "bevy_asset",
    "bevy_text",
    "bevy_render",
] }

[dev-dependencies]
bevy = "0.15"
